--- a/src/sass/app/_gridlist.scss
+++ b/src/sass/app/_gridlist.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
+    opacity: 1;
+    transform: translateY(0px);
 
     &::before {
         content: "";
